<resources>
    <string name="app_name">Story App</string>
    <string name="title_register">Create your new account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">Register</string>
    <string name="title_registrationSuccess">Success!</string>
    <string name="text_registrationSuccess">Now login to your account</string>
    <string name="text_buttonSuccess">Log in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Log in</string>
    <string name="login_title">Log in</string>
    <string name="already_have_account">Already have an account? <u>Log in</u></string>
    <string name="app_logo">App logo</string>
    <string name="title_addStory">Add your story here</string>
    <string name="descTitle">Description</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="tap_to_upload_photo">Tap to upload photo</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="don_t_have_an_account">Don\'t have an account? <u>Register</u></string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>

</resources>