<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFC"
    android:padding="16dp"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:id="@+id/notificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFD6D6"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF5C5C"
            android:textSize="14sp"
            tools:text="Notification message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/successNotificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8F5E9"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tvSuccessNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2E7D32"
        android:textSize="14sp"
        tools:text="Success message" />
    </LinearLayout>`

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="269dp"
        android:layout_height="86dp"
        android:layout_marginHorizontal="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/contentGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_logo" />

    <!-- Content Container -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentGuideline">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_register"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/name"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp">

                    <com.example.storyapp.customview.UsernameEditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email Field -->
                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp">

                    <com.example.storyapp.customview.EmailEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Field -->
                <TextView
                    android:id="@+id/passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:endIconMode="password_toggle">

                    <com.example.storyapp.customview.PasswordEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#1E3E62"
                    android:text="@string/next"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="12dp" />

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="48dp"
                    android:text="@string/already_have_account"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/loadingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:indeterminateTint="#FFCA42" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>